<resources>
    <string name="app_name">RealEstateManager</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="filters">FILTERS</string>
    <string name="modify">Modify</string>
    <string name="static_map_query">https://maps.googleapis.com/maps/api/staticmap?size=300x300&amp;zoom=16&amp;markers=color:red|</string>
    <string name="title_activity_maps">Map</string>
    <string name="media">Media</string>
    <string name="state_of_the_estate">State of the estate</string>
    <string name="sold">Sold</string>
    <string name="entry_date">Entry date</string>
    <string name="sold_date">Sold date</string>
    <string name="general_information_image">General information image</string>
    <string name="general_informations">General informations</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="label_and_way_number">Label and way number</string>
    <string name="complement">Complement</string>
    <string name="address_image">Address image</string>
    <string name="indoor_informations">Indoor informations</string>
    <string name="surface">Surface</string>
    <string name="interest_points">Interest Points</string>
    <string name="restauarant">Restauarant</string>
    <string name="photos">Photos</string>
    <string name="create">Create</string>
    <string name="initial_amount">Initial amount</string>
    <string name="rate">Rate</string>
    <string name="duration_in_years">Duration in years</string>
    <string name="simulate">SIMULATE</string>
    <string name="final_amount">Final amount : … €</string>
    <string name="monthly_amount_month">Monthly amount : … € / month</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="location">Location</string>
    <string name="unknown_address">Unknown address</string>
    <string name="all">All</string>
    <string name="only_on_sale">Only on sale</string>
    <string name="only_sold">Only sold</string>
    <string name="type_of_estate">Type of Estate</string>
    <string name="min_price">Min price</string>
    <string name="max_price">Max price</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="min_surface">Min surface</string>
    <string name="max_surface">Max surface</string>
    <string name="min_number_of_rooms">Min number of rooms</string>
    <string name="max_number_of_rooms">Max number of rooms</string>
    <string name="min_number_of_bathrooms">Min number of bathrooms</string>
    <string name="max_number_of_bathrooms">Max number of bathrooms</string>
    <string name="school">School</string>
    <string name="swimming_pool">Swimming pool</string>
    <string name="shop">Shop</string>
    <string name="library">Library</string>
    <string name="park">Park</string>
    <string name="restaurant">Restaurant</string>
    <string name="filters_name">Filters</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="set_the_photo_name">Set the photo name</string>
    <string name="image">image</string>
    <string name="map_image">Map Image</string>
    <string name="features">Features</string>
    <string name="simulation">Simulation</string>
    <string name="map">Map</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="estate_image">Estate Image</string>
    <string name="real_estate_agent_name">Real estate agent name</string>
    <string name="unknown_value">Unknown value</string>


</resources>
