<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">
        <item
        android:id="@+id/activity_main_menu_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

        <item
            android:id="@+id/activity_main_menu_edit"
            android:icon="@drawable/ic_edit"
            android:title="@string/edit"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/activity_main_menu_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            app:showAsAction="ifRoom" />
    </group>

</menu>