<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    tools:context=".controllers.fragments.EstateDetailsFragment">

    <ScrollView
        android:layout_width="0px"
        android:layout_height="0px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/media_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/media_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/media"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/media_recycler_view_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/media_title"
                    tools:listitem="@layout/holder_photo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/description_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/media_layout">

                <TextView
                    android:id="@+id/description_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/informations_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_layout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/surface_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/surface_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_surface"
                        android:contentDescription="@string/image"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/surface_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/surface"
                        app:layout_constraintStart_toEndOf="@+id/surface_icon"
                        app:layout_constraintTop_toTopOf="@+id/surface_icon" />

                    <TextView
                        android:id="@+id/surface_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/unknown_value"
                        app:layout_constraintStart_toStartOf="@+id/surface_title"
                        app:layout_constraintTop_toBottomOf="@+id/surface_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/number_rooms_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginVertical="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/surface_layout">

                    <ImageView
                        android:id="@+id/number_rooms_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/image"
                        android:src="@drawable/ic_home"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/number_rooms_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/number_of_rooms"
                        app:layout_constraintStart_toEndOf="@+id/number_rooms_icon"
                        app:layout_constraintTop_toTopOf="@+id/number_rooms_icon" />

                    <TextView
                        android:id="@+id/number_rooms_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/unknown_value"
                        app:layout_constraintStart_toStartOf="@+id/number_rooms_title"
                        app:layout_constraintTop_toBottomOf="@+id/number_rooms_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/number_bathrooms_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/number_rooms_layout">

                    <ImageView
                        android:id="@+id/number_bathrooms_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bathtub"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/image"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/number_bathrooms_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/number_of_bathrooms"
                        app:layout_constraintStart_toEndOf="@+id/number_bathrooms_icon"
                        app:layout_constraintTop_toTopOf="@+id/number_bathrooms_icon" />

                    <TextView
                        android:id="@+id/number_bathrooms_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/unknown_value"
                        app:layout_constraintStart_toStartOf="@+id/number_bathrooms_title"
                        app:layout_constraintTop_toBottomOf="@+id/number_bathrooms_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/number_bedrooms_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/number_bathrooms_layout">

                    <ImageView
                        android:id="@+id/number_bedrooms_icon"
                        android:contentDescription="@string/image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_bed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/number_bedrooms_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/number_of_bedrooms"
                        app:layout_constraintStart_toEndOf="@+id/number_bedrooms_icon"
                        app:layout_constraintTop_toTopOf="@+id/number_bedrooms_icon" />

                    <TextView
                        android:id="@+id/number_bedrooms_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/unknown_value"
                        app:layout_constraintStart_toStartOf="@+id/number_bedrooms_title"
                        app:layout_constraintTop_toBottomOf="@+id/number_bedrooms_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/location_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/number_bedrooms_layout">

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="wrap_content"
                        android:contentDescription="@string/image"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/location_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:text="@string/location"
                        app:layout_constraintStart_toEndOf="@+id/location_icon"
                        app:layout_constraintTop_toTopOf="@+id/location_icon" />

                    <TextView
                        android:id="@+id/location_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/unknown_address"
                        app:layout_constraintStart_toStartOf="@+id/location_title"
                        app:layout_constraintTop_toBottomOf="@+id/location_title" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/static_map_image"
                    android:layout_width="256dp"
                    android:layout_height="256dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/map_image"
                    android:scaleType="centerCrop"
                    android:paddingBottom="32dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/location_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>